--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="https://styles.redditmedia.com/t5_49y4ub/styles/communityIcon_hirauzjdjdw61.png" alt="">
+    <img src="./yeah.png" alt="">
 </body>
 </html>
